testing(machine learning): Fixed a typo in the notebooks

--- a/server/machineLearning/ml_test/Anonyjob Model Testing for Orientation.ipynb
+++ b/server/machineLearning/ml_test/Anonyjob Model Testing for Orientation.ipynb
@@ -193,7 +193,7 @@
     }
    ],
    "source": [
-    "# Plot the accuracy of the KNN scores\n",
+    "# Graph the accuracy of the tested models\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
