enhancement(machine learning): Frameworked ML file - ready to tie into form and test

--- a/server/machineLearning/ml_test/Anonyjob Model Testing for Gender.ipynb
+++ b/server/machineLearning/ml_test/Anonyjob Model Testing for Gender.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 140,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 141,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 142,
    "metadata": {
     "collapsed": true
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 143,
    "metadata": {
     "collapsed": true
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 144,
    "metadata": {
     "collapsed": true
    },
@@ -98,8 +98,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
-   "metadata": {},
+   "execution_count": 145,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Test Multinomial Naive Bayes with K-Fold (10-fold) cross-validation\n",
@@ -112,8 +114,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
-   "metadata": {},
+   "execution_count": 146,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Test Bernoulli Naive Bayes with K-Fold (10-fold) cross-validation\n",
@@ -125,8 +129,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
-   "metadata": {},
+   "execution_count": 147,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Test Support Vector Machine with K-Fold (10-fold) cross-validation\n",
@@ -140,8 +146,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
-   "metadata": {},
+   "execution_count": 148,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Test Logistic Regression with K-Fold (10-fold) cross-validation\n",
@@ -153,8 +161,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
-   "metadata": {},
+   "execution_count": 149,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Test a range of KNN values with K-Fold (10-fold) cross-validation\n",
@@ -174,16 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x7feb9b05ea90>"
+       "<matplotlib.text.Text at 0x7f978a81df60>"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -191,7 +201,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYUAAAEJCAYAAAB7UTvrAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFsxJREFUeJzt3Xm4JXV95/H3RxBJIkaRVvOwNSqTpAeNSwdxieKWgWiA\nKI604ohZmBgZcHRGMVEijEaFUUcTohIXjKJsSqbVBiJKu0RluM2iNoTYEpRGEztCMMqANHzzR9X9\n9eF6l3O7u/o2fd+v5+HpU1W/U+dblzr1qeXUr1JVSJIEcJ+FLkCStP0wFCRJjaEgSWoMBUlSYyhI\nkhpDQZLUGAqSpMZQkCQ1hoIkqdl5oQuYrz322KOWLl260GVI0r3KmjVr/qWqlszV7l4XCkuXLmVi\nYmKhy5Cke5Uk3xmnnaePJEmNoSBJagwFSVJjKEiSGkNBktQYCpKkxlCQJDWGgiSpMRQkSc297o5m\nSZqPpSd+ZqFL2GpueOtzBv8MjxQkSY2hIElqDAVJUmMoSJKaRXWh2QtOkjQ7jxQkSc2goZDkkCTX\nJVmX5MRpph+TZEOSq/r/fn/IeiRJsxvs9FGSnYDTgWcD64HLk6ysqmumND2nqo4bqg5J0viGPFI4\nEFhXVddX1U+Bs4HDB/w8SdIWGjIU9gRuHBle34+b6vlJvp7k/CR7D1iPJGkOC32h+VPA0qp6NPBZ\n4MPTNUpybJKJJBMbNmzYpgVK0mIyZCjcBIzu+e/Vj2uq6odVdUc/+H7g8dPNqKrOqKrlVbV8yZIl\ngxQrSRr2PoXLgf2T7EcXBkcBLxptkOSXqur7/eBhwLUD1rPo7Sj3aXiPhjScwUKhqjYmOQ64GNgJ\n+GBVrU1yCjBRVSuB45McBmwEbgaOGaoeSdLcBr2juapWAaumjDtp5PXrgNcNWYMkaXwLfaFZkrQd\nMRQkSY2hIElqFlUvqdJi5S/PNC6PFCRJjaEgSWoMBUlSYyhIkhpDQZLUGAqSpMZQkCQ1hoIkqTEU\nJEmNoSBJagwFSVJjKEiSGkNBktQYCpKkxlCQJDWGgiSp8SE7WhR2lIfMgA+a0bA8UpAkNYaCJKkx\nFCRJjaEgSWoMBUlSYyhIkhpDQZLUGAqSpMZQkCQ1g4ZCkkOSXJdkXZITZ2n3/CSVZPmQ9UiSZjdY\nKCTZCTgdOBRYBqxIsmyadrsBJwCXDVWLJGk8Qx4pHAisq6rrq+qnwNnA4dO0+1/A24DbB6xFkjSG\nIUNhT+DGkeH1/bgmyeOAvatqx+mtTJLuxRbsQnOS+wDvAF49Rttjk0wkmdiwYcPwxUnSIjVkKNwE\n7D0yvFc/btJuwAHA6iQ3AAcBK6e72FxVZ1TV8qpavmTJkgFLlqTFbchQuBzYP8l+SXYBjgJWTk6s\nqlurao+qWlpVS4GvAYdV1cSANUmSZjFYKFTVRuA44GLgWuDcqlqb5JQkhw31uZKkzTfok9eqahWw\nasq4k2Zoe/CQtUiS5uYdzZKkxlCQJDWGgiSpMRQkSY2hIElqDAVJUmMoSJIaQ0GS1BgKkqTGUJAk\nNYaCJKkxFCRJjaEgSWoMBUlSYyhIkhpDQZLUGAqSpMZQkCQ1hoIkqTEUJEmNoSBJagwFSVJjKEiS\nGkNBktQYCpKkxlCQJDWGgiSpMRQkSY2hIElqDAVJUjNrKCTZfbb/5pp5kkOSXJdkXZITp5n+h0m+\nkeSqJF9OsmxLFkaStGV2nmP6GqCATDOtgIfP9MYkOwGnA88G1gOXJ1lZVdeMNPtYVb23b38Y8A7g\nkPHLlyRtTbOGQlXttwXzPhBYV1XXAyQ5GzgcaKFQVT8aaf8LdEEjSVogY11TSOfoJG/oh/dJcuAc\nb9sTuHFkeH0/buq8X5Hk28CpwPHjlS1JGsK4F5r/Engi8KJ++N/oTg1tsao6vaoeAbwWeP10bZIc\nm2QiycSGDRu2xsdKkqYxbig8oapeAdwOUFW3ALvM8Z6bgL1Hhvfqx83kbOCI6SZU1RlVtbyqli9Z\nsmTMkiVJ8zVuKNzZXzgugCRLgLvneM/lwP5J9kuyC3AUsHK0QZL9RwafA3xrzHokSQOY69dHk94N\nXAA8JMmbgSOZ4VTPpKramOQ44GJgJ+CDVbU2ySnARFWtBI5L8izgTuAW4KWbuRySpK1grFCoqrOS\nrAGeSffz1COq6tox3rcKWDVl3Ekjr0+YX7mSpCHNGgpTblD7AfDx0WlVdfNQhUmStr353Ly2D90p\nngAPBL4LbMl9DJKk7cysF5qrar+qejhwCfDbVbVHVT0YeC7wt9uiQEnStjPur48O6q8PAFBVFwJP\nGqYkSdJCGffXR99L8nrgo/3wi4HvDVOSJGmhjHuksAJYQvez1AuAh/TjJEk7kHF/knozcEKS3brB\n+vGwZUmSFsK4HeI9KsmVwDeBtUnWJDlg2NIkSdvauKeP3ge8qqr2rap9gVcDZwxXliRpIYwbCr9Q\nVZdODlTVarrnH0iSdiDj/vro+v5ZCh/ph48Grh+mJEnSQhn3SOF36X599Mn+vyX9OEnSDmTcXx/d\ngk9Fk6Qd3lwd4q2cbXpVHbZ1y5EkLaS5jhSeSPec5Y8Dl9F1hidJ2kHNFQoPA55Nd/fyi4DPAB+v\nqrVDFyZJ2vbm6iX1rqq6qKpeChwErANW909UkyTtYOa80JzkfnTPT14BLGXTozklSTuYuS40/zVw\nAN0jNU+uqm9uk6okSQtiriOFo4GfACcAxyftOnPoOsZ7wIC1SZK2sVlDoarGvblNkrQDcKMvSWoM\nBUlSYyhIkhpDQZLUGAqSpMZQkCQ1hoIkqTEUJEmNoSBJagwFSVIzaCgkOSTJdUnWJTlxmumvSnJN\nkq8n+VySfYesR5I0u8FCIclOwOnAocAyYEWSZVOaXQksr6pHA+cDpw5VjyRpbkMeKRwIrKuq66vq\np8DZwOGjDarq0qq6rR/8GrDXgPVIkuYwZCjsSfd850nr+3Ez+T3gwukmJDk2yUSSiQ0bNmzFEiVJ\no7aLC81JjgaWA6dNN72qzqiq5VW1fMmSJdu2OElaROZ8HOcWuAnYe2R4r37cPSR5FvAnwNOq6o4B\n65EkzWHII4XLgf2T7JdkF+AoYOVogySPBd4HHFZVPxiwFknSGAYLharaCBwHXAxcC5xbVWuTnJLk\nsL7ZacD9gfOSXJVk5QyzkyRtA0OePqKqVgGrpow7aeT1s4b8fEnS/GwXF5olSdsHQ0GS1BgKkqTG\nUJAkNYaCJKkxFCRJjaEgSWoMBUlSYyhIkhpDQZLUGAqSpMZQkCQ1hoIkqTEUJEmNoSBJagwFSVJj\nKEiSGkNBktQYCpKkxlCQJDWGgiSpMRQkSY2hIElqDAVJUmMoSJIaQ0GS1BgKkqTGUJAkNYaCJKkx\nFCRJzaChkOSQJNclWZfkxGmmPzXJFUk2JjlyyFokSXMbLBSS7AScDhwKLANWJFk2pdl3gWOAjw1V\nhyRpfDsPOO8DgXVVdT1AkrOBw4FrJhtU1Q39tLsHrEOSNKYhTx/tCdw4Mry+HydJ2k7dKy40Jzk2\nyUSSiQ0bNix0OZK0wxoyFG4C9h4Z3qsfN29VdUZVLa+q5UuWLNkqxUmSftaQoXA5sH+S/ZLsAhwF\nrBzw8yRJW2iwUKiqjcBxwMXAtcC5VbU2ySlJDgNI8utJ1gMvAN6XZO1Q9UiS5jbkr4+oqlXAqinj\nThp5fTndaSVJ0nbgXnGhWZK0bRgKkqTGUJAkNYaCJKkxFCRJjaEgSWoMBUlSYyhIkhpDQZLUGAqS\npMZQkCQ1hoIkqTEUJEmNoSBJagwFSVJjKEiSGkNBktQYCpKkxlCQJDWGgiSpMRQkSY2hIElqDAVJ\nUmMoSJIaQ0GS1BgKkqTGUJAkNYaCJKkxFCRJjaEgSWoGDYUkhyS5Lsm6JCdOM/1+Sc7pp1+WZOmQ\n9UiSZjdYKCTZCTgdOBRYBqxIsmxKs98DbqmqRwLvBN42VD2SpLkNeaRwILCuqq6vqp8CZwOHT2lz\nOPDh/vX5wDOTZMCaJEmzGDIU9gRuHBle34+btk1VbQRuBR48YE2SpFnsvNAFjCPJscCx/eCPk1y3\nkPWMYQ/gX4b8gGy/J9pc9oEt5uVfzMsOW7z8+47TaMhQuAnYe2R4r37cdG3WJ9kZ+EXgh1NnVFVn\nAGcMVOdWl2SiqpYvdB0LwWVfnMsOi3v5d6RlH/L00eXA/kn2S7ILcBSwckqblcBL+9dHAp+vqhqw\nJknSLAY7UqiqjUmOAy4GdgI+WFVrk5wCTFTVSuADwEeSrANupgsOSdICGfSaQlWtAlZNGXfSyOvb\ngRcMWcMCudec6hqAy754Lebl32GWPZ6tkSRNspsLSVKzQ4dCkqVJKsnT++FdktzSX+uYrv2ZSQ7o\n3/ebI+PfN0BtM84zyRuTPLd/XUle2L8+IMmZI7VenuQLSS5Mcv8xP3dpkg1JVvfv3ybXcfrPu3+S\nYyb//pN/g355107euJjk/L7OBal1lmXYLcmn+nq+mmRNkv88Mn3fJJfMd70b87OXJjl/M9/7sCQn\nzzDtMUkOnKvdlPcck+Rb/d/hSwvVPU1fxxO34vza3zjJ/kkmkuzTf9cuHGk30f97cJKfJtmrHz4u\nyTFT5vkfklyV5PbR72j/Xb44yaVJXr61lmFr2KFDoTcBPK9//SzgW2O8ZynQQqGq/uvWLmoe8/xH\n4BUzTHtZVT0N+BJwxDw+/gtVdTDwG8D/nKtxkkHWkyl/gwKeO02zedU6sP8CXNTX8yS6blqOHJl+\nJHBe/3pz1rtBVNU/VdWfzjD5MXS9D8zVbqp39X+H9zHz+jmnLVm3qurMqvrq5r5/Jkn2BD4GHF1V\n3+1H75Xk0dM0/wfgv88yu/XA04CvTRn/FuAFVfX0qnrPlta8NS2GUPgOsE+/F/o7wCdhU9pPfd17\nOfDCfk9o95E9gzOTvDfJZ5P8TTo7Jflov8f+mSQP6vc4vpKus7+1SV6Y5NNJrk6y/+hnJnlJ/zlX\nJHnJNPXfDFyd5FmzLOMDgB9txt/m54HbkuzaL8Pnk6xM8oB+Gb6Y5BzgtfNc9sm9rfsnWT3Th0/5\nu78LeOVctW7GMm5N/x84KMlDq3MV3c+uf66ffgT9+sUM693WlORRSb6c5O+SvK4ft08/vCrJ2f3e\n9Oj/kw/1e/er+z38lwMnJPnbKe0O7Oe9OslsYfxAYPII7+H93u/qJO/sxz2wn/dF/Tr0xn78NUk+\nBLwjyR79OvX5JGf169VB6TrJvDTdkeR9s+kobXW/zo4eUb+9r/fz/XKR5NokH063p/7iMf+suwOf\nAP6wqv5+ZPz/Bl4zTfuL6NaJB003s6q6rapuHR2X5OHAfYGz+r/Xr4xZ2zaxGEIB4KvAU4ElwD+N\n0f49wDlVdXBV3Txl2leq6tnAHcCj6L7w6/s99rOB/9a3exDwIrq9iNcAhwEnAVM3/J/o97iezMx7\nHG8HXj3N+A8luYxuY7R6jOWa9LR+Y/0Nuj2i36e7R+QZwFlsunt8T+AlVfWWfnjcZd8c3wf+McmT\n56h1IX0EuA64ON3po18GLgQOTXcK4Y6q2jDSfr7r3Xz9GfAHwFOAp/cbw9cAJ1fVbwF3jzZOcl/g\nl4Gn9uvcd+nW9XdV1W9yT+8EVvTt3j7NZ5+QZA3wWrpAB3gr8Ef9e3ZNspxu3Tq/qg4Bvjfy/r2A\nV1XVK4ETgXf369/X6dar5/TL8XTgFGAf4LZ+3k/vf7k4uVzLgT2r6inAn9J9zwAeRrdOPhU4fvo/\n4c94HLChqtZMGb8G2CPJdHcFvwf4ozHnD/BQ4NHA0XTf63fM472DWyyh8Am6lXz1DNPn0wnflf2/\nN9Jt+B9Jd6Me/b/796+vqaq76L4I36yqu+nu4J66R/Gf+o3eRf28fkZV3UB3xPC4KZNeVlVPoNsQ\nnDqPZZg8JbMUeHE/35f3dRxPd8s+wNV9Z4aTxln20Z+zzbdzw9OA/zFbrf3Gd0FU1Z1V9aaqegzd\nhudkutNFRwLPp+vUcdRc692WelhVXdvf8HkF8Ai6/yeTG7R7bNiq6k66nos/kuRddEdfM9mlqib7\nJbt7munvqqrHA58B/mM/7leAD/Tr0YF0G/6Z6llXVbf0r5cBJ/fvex7dxvx04LeSnAUcUlXfBr6S\n5KPAm9L1wjxppu/g9VX1o6r6Ed29UuO4hG7n5JRpps20czbZ2eeuY37GvwJrqurWqvom3U7DdmNR\nhEJVfQv4Mvf80u7aH6buw89uqO9k5pVo6kZvHf05WeDX2XTuuGZ5z6jX0+0VHcrsp0dOZeZz6rcA\nD5nlvdPqNxJ3AFfR7akdXFVPBt7QN5m6MRhn2f+VTR0f/to867kOuAv41Vlq3X0+89ya0l1I3qUf\n/AHdT7qvpKv3KKacIpphvdua/jnJr/anqB4HfJvu/8lj++mPHW3cb0jPraqjgX+m2wDPtK7fke7c\n+lzn/U9m0/pyHfDSPsSXA5+epZ7RdevvgT/u178n0F2nuLWqjgNeBrwtyf2AP+9rX0J3ZD1pHd36\nBzN/B+fjlcCvJXnZ6Miq+my/DLtPGb8R+CibemeYy7fojjru2+/k3DrXG7ale0WHeFtDVR0PkE09\nc59Fd3j/RboN2ahvAG9Jch7d4fls/gZ4XpIvAj+mOyR8wDxK+yTdheIr6DbuM9V/dZL1U0Z/KMlP\ngPsB8/lly+QpmV2B/0d3480ZI1+CtwNrx5jPzyx7Vd2a5MokXwK+MI+aJp3GPS/K3aPWqvr6Zsxz\na3kUcE6S2+lCcfIC60XAE6rqB1PfMM16tyV+I8kl/etLgD8B3t/X8pmquiHJqcDHk7ya7hrInSPv\n3w34v0mKboP5Yrq/618neQLwxyNtXwWcm+ROuqOB06YrqKq+n+SmJAfRnUp6b5Jd6cL9d/v6zkvy\nAroO466ZZjZvBv4qm3759BrgKUmeR7eNOpOuM7cPJLkL+And9+UZfQ0TSb6f5MvARrog2WxVdXeS\nFwGXTPOd+wu6I4Op3s+m01ZNf63hPLodpE8lObWqLkxyGnApXSCfsCX1bm3evCbtQJLs3O+5kuRj\ndKd5LlvAeu5Dt525K8mf0Z2SPGeh6tHcFs2RgrRI7JvuXpad6TbACxYIvZ8DLupPcf0AeOPClqO5\neKQgSWoWxYVmSdJ4DAVJUmMoSJIaQ0GLVpIj0nVct111MyAtJENBi9kKupvLVgz1AVPuvJW2e4aC\nFqV03Rg/ha6n06NGxr82yTfSdV741n7cI9N1iX11uo4LH5Gu2+RPj7zvL9J3m5zkhiRvS3IF8IIk\nf5Cu6++rk3wiyc/37R6a5IJ+/NVJnpTklCSvHJnvm5NsVzc3acfmfQparA6n6wb7H5L8MMnj6boK\nOZzu7uTbkkx2Z3AW8NaquqC/W/c+wN5zzP+HVfU4gCQPrqq/6l+/iS6I/hx4N13fTr/TH1Hcn66v\nrE8C/6e/8esoNnUlIg3OUNBitYJNvXue3Q8H+FBV3QZQVTcn2Y2uB84L+nG3w1jdVozetXtAHwYP\npNvwX9yPfwbdMxroO0+8Fbi1D6nH0vWmeWVV/XBLFlSaD0NBi05/BPAM4FF9P0A70fUFdN6sb7yn\njdzz9OvUHjJ/MvL6TOCIvv+qY4CD55j3+4Fj6HoL/eA8apK2mNcUtBgdCXykqvatqqVVtTfdE+5u\nBV42cs5/96r6N2B9kiP6cffrp38HWNYPPxB45iyftxvw/XTPMxh92Mvn6B5yQ99j7y/24y8ADqHr\n8fNipG3IUNBitIJuwzvqE8AvASuBiSRXsenZDi8Bjk/ydeArdM8xuBE4F/hm/++VzOwNwGXA39F1\nEz3pBLqH43yD7lkDywD6Z1hcStfN9V2bu5DS5rDvI2k7019gvoLuGb4L9mxnLU4eKUjbkSTL6B4a\n8zkDQQvBIwVJUuORgiSpMRQkSY2hIElqDAVJUmMoSJIaQ0GS1Pw7x9154cBFbRkAAAAASUVORK5C\nYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7feb9b575588>"
+       "<matplotlib.figure.Figure at 0x7f978a98b048>"
       ]
      },
      "metadata": {},
