--- a/server/machineLearning/ml_test/Anonyjob Model Testing for Race.ipynb
+++ b/server/machineLearning/ml_test/Anonyjob Model Testing for Race.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -92,8 +92,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Test Multinomial Naive Bayes with K-Fold (10-fold) cross-validation\n",
@@ -105,8 +107,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Test Bernoulli Naive Bayes with K-Fold (10-fold) cross-validation\n",
@@ -119,8 +123,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Test Support Vector Machine with K-Fold (10-fold) cross-validation\n",
@@ -134,8 +140,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Test Logistic Regression with K-Fold (10-fold) cross-validation\n",
@@ -147,8 +155,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Test a range of KNN values with K-Fold (10-fold) cross-validation\n",
@@ -169,16 +179,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x7fb548361748>"
+       "<matplotlib.text.Text at 0x7f15ff073cc0>"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -186,7 +196,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYUAAAEJCAYAAAB7UTvrAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAGHhJREFUeJzt3Xu4HXV97/H3x9BIVawiG+2TEBI1rc0R6yUGb1W89YRq\ngSrWRPGIraa1pmDxqNgqCketl6NWa04r9YJVNCCKJ5VIKire9STc1ECjabwQtCUFxKpHIPjtHzN7\nstjuvdfeIZMdst+v58nDmpnfmvWdxez5zGXNb1JVSJIEcKeZLkCStO8wFCRJHUNBktQxFCRJHUNB\nktQxFCRJHUNBktQxFCRJHUNBktQ5YKYLmK5DDjmkFi5cONNlSNIdyiWXXPIfVTUyrN0dLhQWLlzI\npk2bZroMSbpDSfK9qbTz9JEkqWMoSJI6hoIkqWMoSJI6hoIkqWMoSJI6hoIkqWMoSJI6hoIkqXOH\nu6NZ2h0LT71gpkvYY777hqfMdAnaj3mkIEnqGAqSpI6hIEnqGAqSpE6voZBkeZItSbYmOXWc6W9L\ncnn771tJftRnPZKkyfX266Mkc4A1wJOB7cDGJOuq6srRNlX1FwPt/xx4SF/1SJKG6/NIYRmwtaq2\nVdXNwFrg2EnarwQ+3GM9kqQh+gyFecDVA8Pb23G/JMnhwCLgMxNMX5VkU5JNO3bs2OOFSpIa+8qF\n5hXAeVV163gTq+rMqlpaVUtHRoY+YlSStJv6DIVrgMMGhue348azAk8dSdKM6zMUNgKLkyxKMpdm\nw79ubKMkDwDuCXylx1okSVPQWyhU1U5gNbABuAo4t6o2JzkjyTEDTVcAa6uq+qpFkjQ1vXaIV1Xr\ngfVjxp02Zvg1fdYgSZq6feVCsyRpH2AoSJI6hoIkqTOrHrLjg1YkaXIeKUiSOoaCJKljKEiSOoaC\nJKljKEiSOoaCJKljKEiSOoaCJKljKEiSOoaCJKljKEiSOoaCJKljKEiSOoaCJKljKEiSOr2GQpLl\nSbYk2Zrk1Ana/GGSK5NsTvKhPuuRJE2ut4fsJJkDrAGeDGwHNiZZV1VXDrRZDLwCeHRV3ZDk0L7q\nkWaz/eUBUz5cqn99PnltGbC1qrYBJFkLHAtcOdDmBcCaqroBoKqu7bEeSbPQ/hKIsHdCsc/TR/OA\nqweGt7fjBv0G8BtJvpTkq0mW91iPJGmImX5G8wHAYuAoYD7w+SRHVNWPBhslWQWsAliwYMHerlGS\nZo0+jxSuAQ4bGJ7fjhu0HVhXVbdU1XeAb9GExG1U1ZlVtbSqlo6MjPRWsCTNdn2GwkZgcZJFSeYC\nK4B1Y9p8nOYogSSH0JxO2tZjTZKkSfQWClW1E1gNbACuAs6tqs1JzkhyTNtsA3BdkiuBzwIvrarr\n+qpJkjS5Xq8pVNV6YP2YcacNvC7glPafJGmGeUezJKljKEiSOoaCJKkz0/cpaC/aX+7stKsDqT8e\nKUiSOoaCJKljKEiSOoaCJKljKEiSOoaCJKljKEiSOoaCJKljKEiSOoaCJKljKEiSOoaCJKljKEiS\nOoaCJKljKEiSOr2GQpLlSbYk2Zrk1HGmn5hkR5LL23/P77MeSdLkenvITpI5wBrgycB2YGOSdVV1\n5Zim51TV6r7qkCRNXZ9HCsuArVW1rapuBtYCx/b4eZKk26nPUJgHXD0wvL0dN9bTk3w9yXlJDuux\nHknSEDN9ofmfgIVV9SDgU8D7x2uUZFWSTUk27dixY68WKEmzSZ+hcA0wuOc/vx3XqarrquqmdvDd\nwMPGm1FVnVlVS6tq6cjISC/FSpL6DYWNwOIki5LMBVYA6wYbJPn1gcFjgKt6rEeSNERvvz6qqp1J\nVgMbgDnAe6tqc5IzgE1VtQ44KckxwE7geuDEvuqRJA3XWygAVNV6YP2YcacNvH4F8Io+a5AkTd1M\nX2iWJO1DDAVJUsdQkCR1DAVJUsdQkCR1DAVJUsdQkCR1DAVJUsdQkCR1DAVJUsdQkCR1DAVJUsdQ\nkCR1DAVJUsdQkCR1Jn2eQpKDJ5teVdfv2XIkSTNp2EN2LgEKyDjTCrjvHq9IkjRjJg2Fqlq0twqR\nJM28KV1TSOOEJK9qhxckWdZvaZKkvW2qF5r/D/BI4Fnt8H8Ca3qpSJI0Y6YaCkdW1YuAnwNU1Q3A\n3GFvSrI8yZYkW5OcOkm7pyepJEunWI8kqQdTDYVbksyhubhMkhHgF5O9oW2/BjgaWAKsTLJknHYH\nAScDX5tG3ZKkHkw1FN4BnA8cmuR1wBeB1w95zzJga1Vtq6qbgbXAseO0+1/AG2mPQiRJM2fYT1IB\nqKqzk1wCPJHm56nHVdVVQ942D7h6YHg7cORggyQPBQ6rqguSvHSiGSVZBawCWLBgwVRKliTthunc\nvHYt8OHBabfn5rUkdwLeCpw4rG1VnQmcCbB06dLa3c+UJE1uOjevLQBuaF/fA/g+MNl9DNcAhw0M\nz2/HjToIeCBwcRKA+wDrkhxTVZumsQySpD1k0msKVbWoqu4LXAT8flUdUlX3Ap4K/POQeW8EFidZ\nlGQusAJYNzDvG9v5LayqhcBXAQNBkmbQVC80P6Kq1o8OVNUngUdN9oaq2gmsBjYAVwHnVtXmJGck\nOWZ3C5Yk9WdKF5qBHyR5JfDBdvjZwA+GvakNkvVjxp02QdujpliLJKknUz1SWAmM0Pws9Xzg0Hac\nJGk/MtWfpF4PnNzeaFZV9ZN+y5IkzYSpdoh3RJLLgG8Cm5NckuSB/ZYmSdrbpnr66F3AKVV1eFUd\nDryE9r4BSdL+Y6qhcNeq+uzoQFVdDNy1l4okSTNmqr8+2tY+S+ED7fAJwLZ+SpIkzZSpHin8Ec2v\njz7W/htpx0mS9iNT/fXRDcBJPdciSZphwzrEWzfZ9KryzmRJ2o8MO1J4JE331x+meQhOeq9IkjRj\nhoXCfYAn09y9/CzgAuDDVbW578IkSXvfsF5Sb62qC6vqucAjgK00XV2v3ivVSZL2qqEXmpPcGXgK\nzdHCQnY9mlOStJ8ZdqH5H2kehLMeOL2qvrlXqpIkzYhhRwonAD8FTgZOap+QBs0F56qqu/dYmyRp\nL5s0FKpqqje3SZL2A270JUkdQ0GS1DEUJEmdXkMhyfIkW5JsTXLqONP/NMk3klye5ItJlvRZjyRp\ncr2FQpI5wBrgaGAJsHKcjf6HquqIqnow8CbgrX3VI0kars8jhWXA1qraVlU3A2uBYwcbVNWPBwbv\nClSP9UiShpjqQ3Z2xzyazvRGbQeOHNsoyYuAU4C5wBN6rEeSNMSMX2iuqjVVdT/g5cArx2uTZFWS\nTUk27dixY+8WKEmzSJ+hcA1w2MDw/HbcRNYCx403oarOrKqlVbV0ZGRkD5YoSRrUZyhsBBYnWZRk\nLrACuM1De5IsHhh8CvDtHuuRJA3R2zWFqtrZdrG9AZgDvLeqNic5A9hUVeuA1UmeBNwC3AA8t696\nJEnD9XmhmapaT9PD6uC40wZen9zn50uSpmfGLzRLkvYdhoIkqWMoSJI6hoIkqWMoSJI6hoIkqWMo\nSJI6hoIkqWMoSJI6hoIkqWMoSJI6hoIkqWMoSJI6hoIkqWMoSJI6hoIkqWMoSJI6hoIkqWMoSJI6\nvYZCkuVJtiTZmuTUcaafkuTKJF9P8ukkh/dZjyRpcr2FQpI5wBrgaGAJsDLJkjHNLgOWVtWDgPOA\nN/VVjyRpuD6PFJYBW6tqW1XdDKwFjh1sUFWfraqftYNfBeb3WI8kaYg+Q2EecPXA8PZ23ET+GPhk\nj/VIkoY4YKYLAEhyArAUeNwE01cBqwAWLFiwFyuTpNmlzyOFa4DDBobnt+NuI8mTgL8Cjqmqm8ab\nUVWdWVVLq2rpyMhIL8VKkvoNhY3A4iSLkswFVgDrBhskeQjwLppAuLbHWiRJU9BbKFTVTmA1sAG4\nCji3qjYnOSPJMW2zNwN3Az6S5PIk6yaYnSRpL+j1mkJVrQfWjxl32sDrJ/X5+ZKk6fGOZklSx1CQ\nJHUMBUlSx1CQJHUMBUlSx1CQJHUMBUlSx1CQJHUMBUlSx1CQJHUMBUlSx1CQJHUMBUlSx1CQJHUM\nBUlSx1CQJHUMBUlSx1CQJHUMBUlSx1CQJHV6DYUky5NsSbI1yanjTH9skkuT7ExyfJ+1SJKG6y0U\nkswB1gBHA0uAlUmWjGn2feBE4EN91SFJmroDepz3MmBrVW0DSLIWOBa4crRBVX23nfaLHuuQJE1R\nn6eP5gFXDwxvb8dNW5JVSTYl2bRjx449Upwk6ZfdIS40V9WZVbW0qpaOjIzMdDmStN/qMxSuAQ4b\nGJ7fjpMk7aP6DIWNwOIki5LMBVYA63r8PEnS7dRbKFTVTmA1sAG4Cji3qjYnOSPJMQBJHp5kO/AM\n4F1JNvdVjyRpuD5/fURVrQfWjxl32sDrjTSnlSRJ+4A7xIVmSdLeYShIkjqGgiSpYyhIkjqGgiSp\nYyhIkjqGgiSpYyhIkjqGgiSpYyhIkjqGgiSpYyhIkjqGgiSpYyhIkjqGgiSpYyhIkjqGgiSpYyhI\nkjqGgiSp02soJFmeZEuSrUlOHWf6nZOc007/WpKFfdYjSZpcb6GQZA6wBjgaWAKsTLJkTLM/Bm6o\nqvsDbwPe2Fc9kqTh+jxSWAZsraptVXUzsBY4dkybY4H3t6/PA56YJD3WJEmaRJ+hMA+4emB4eztu\n3DZVtRO4EbhXjzVJkiZxwEwXMBVJVgGr2sGfJNkyk/VMwSHAf/T5Adl3T7S57D2bzcs/m5cdbvfy\nHz6VRn2GwjXAYQPD89tx47XZnuQA4NeA68bOqKrOBM7sqc49Lsmmqlo603XMBJd9di47zO7l35+W\nvc/TRxuBxUkWJZkLrADWjWmzDnhu+/p44DNVVT3WJEmaRG9HClW1M8lqYAMwB3hvVW1OcgawqarW\nAe8BPpBkK3A9TXBIkmZIr9cUqmo9sH7MuNMGXv8ceEafNcyQO8yprh647LPXbF7+/WbZ49kaSdIo\nu7mQJHX261BIsjBJJXl8Ozw3yQ3ttY7x2p+V5IHt+353YPy7eqhtwnkmeU2Sp7avK8kz29cPTHLW\nQK0bk3wuySeT3G2Kn7swyY4kF7fv3yvXcdrPu1uSE0e//9HvoF3ezaM3LiY5r61zRmqdZBkOSvJP\nbT1fSXJJkj8cmH54koumu95N8bMXJjlvN997nySnTzDtwUmWDWs35j0nJvl2+z18Yaa6p2nreGQP\n8+2+6ySLk2xKsqD9m/vkQLtN7X+PSnJzkvnt8OokJ46Z5++3Xfl8Mcnb93TNe9J+HQqtTcDT2tdP\nAr49hfcsBLpQqKo/2dNFTWOe3wFeNMG051XV44AvAMdN4+M/V1VHAb8DvHRY4yS9rCdjvoMCnjpO\ns2nV2rP/AVzY1vMomm5ajh+Yfjzwkfb17qx3vaiqf6uqV08w+cE0vQ8MazfW29vv4V1MvH4OdXvW\nrao6q6q+srvvHybJPOBDwAlV9f129PwkDxqn+beAv5hkdlcAj66qxwCHJtlnf746G0Lhe8CCdi/0\nD4CPwa6UH/u69ULgme2e0MEDewRnJfn7JJ9K8vE05iT5YLvHfkGSe7Z7Gl9O09nf5iTPTPKJJFck\nWTz4mUme037OpUmeM0791wNXJHnSJMt4d+DHu/Hd3AX4WZID22X4TJJ1Se7eLsPnk5wDvHyayz66\nl3W3JBdP9OFjvve3Ay8eVutuLOOe9P+BRyS5dzUup/nZ9a+204+jXb+YYL3bk5Ic0e55finJK9px\nC9rh9UnWtnvTg/9P3tfu3V/c7uG/EDg5yT+PabesnffFSSYL43sAo0d4902yoX3P29px92jnfWG7\nDr2mHX9lkvcBb01ySLtOfSbJ2e169Yh2z/qzaY4kfyW7jtIubtfZwSPqt7T1fqZdLpJcleT9SS5P\n8uxpfr0HAx8F/rSq/mVg/P8GXjZO+wtp1o17jjezqvp+22sDwM3AL6ZZz14zG0IB4CvAY4ER4N+m\n0P7vgHOq6qiqun7MtC9X1ZOBm4AjaP7gt7d77GuBP2/b3RN4Fs3ew8uAY4DTgLEb/o+2e1yPZuI9\njbcALxln/PuSfI1mY3TxFJZr1OPajfU3aPaEnk9zj8gTgLPZdff4POA5VfXX7fBUl313/BD4TpJH\nD6l1Jn0A2AJsSHP66DeBTwJHpzl1cFNV7RhoP931brpeD7wAeAzw+HZj+DLg9Kr6PcZseJL8CvCb\nwGPbde77NOv626vqd7mttwEr23ZvGeezT05yCfBymkAHeAPwZ+17DkyzN/x84LyqWg78YOD984FT\nqurFwKnAO9r17+s069VT2uV4PHAGsAD4WTvvx7e/XBxdrqXAvHYv/NU0f2cA96FZJx8LnDT+Vzih\nhwI7quqSMeMvAQ5JMt7dwX8H/NlkM03ycODQqrp0mvXsNbMlFD5Ks5JfPMH06XTCd1n736tpNvz3\np7lRj/a/i9vXV1bVrTR/CN+sql/Q3ME9dk/iv7cbvQvbef2SqvouzRHDQ8dMel5VHUmzIXjTNJZh\n9JTMQuDZ7Xxf2NZxEs0t+wBXtJ0ZjprKsg/+nG26nRu+Gfifk9XabnxnRFXdUlWvraoH02x4Tqc5\nXXQ88HSaTh0HDVvvbq/7VNVV7Q2flwL3o/l/Mrohu80Grapuoem5+ANpzmvfZZJ5z62q0X7Jxtur\nfXtVPQy4APhv7bgHAO9p16NlNBv+ierZWlU3tK+XAKe373sazcZ8DfB7Sc4GllfVvwJfTvJB4LVp\nemEeNdHf4Laq+nFV/ZjmXqnpuIhmJ+WMcaZNtJM22unngePNsF13/4ZdN+zuk2ZFKFTVt4Evcts/\n2gPbw9QF/PKG+hYmXonGbvS20p6TBR7OrnPHNcl7Br2SZq/oaCY/PfImJj6nfgNw6CTvHVe7kbgJ\nuJxmT+2oqno08Kq2ydiNwVSW/Ufs6vjwt6dZzxbgVuC3Jqn14OnMc09KcyF5bjt4Lc1Pui+jqXcF\nY04RTbDe7Un/nuS32lNUDwX+leb/yUPa6Q8ZbNxuSM+tqhOAf6fZAE+0rt+U5pz6sPP+p7NrfdkC\nPLcN8aXAJyapZ3Dd+hfgL9v170ia6xQ3VtVq4HnAG5PcGfjbtvYRmiPrUVtp1j+Y+G9wd7wY+O0k\nzxscWVWfapfl4DHjdwIfZJyNfpKDaELjT6rq2ttZV6/uEB3i7QlVdRJAdvXMfTbN4f3naTZkg74B\n/HWSj9Acnk/m48DTknwe+AlwAs05/qn6GM2F4ktpNu4T1X9Fku1jRr8vyU+BOwPT+WXL6CmZA4H/\nR3PjzZkDK/9bgM1TmM8vLXtV3ZjksiRfAD43jZpGvRn46kS1VtXXd2Oee8oRwDlJfk4TiqMXWC8E\njhzvj32c9e72+J0kF7WvLwL+Cnh3W8sFVfXdJG8CPpzkJTTXQG4ZeP9BwP9NUjQbzGfTfK//mORI\n4C8H2p4CnJvkFpqjgTePV1BV/TDJNUkeQXMq6e+THEgT7n/U1veRJM+g6TDuynFm8zrgH7Lrl08v\nAx6T5Gk026izaDpze0+SW4Gf0vy9PKGtYVOSHyb5IrCTJkhut6r6RZJnAReN87f3TpqN/FjvZtfp\nq0EvBhYB72zXhVdX1e78ffTOm9ek/UiSA0YvaCb5EM1pnq/NYD13otnO3Jrk9TSnJM+ZqXo03Kw5\nUpBmicPT3MtyAM0GeMYCofWrwIXtKa5rgdfMbDkaxiMFSVJnVlxoliRNjaEgSeoYCpKkjqGgWSvJ\ncWk6rnvATNci7SsMBc1mK2luLlvZ1weMufNW2ucZCpqV0nQ1/hiank5XDIx/eZJvpOm88A3tuPun\n6RL7ijQdF94vTXfJnxh43zvTdpec5LtJ3pjkUuAZSV6QpuvvK5J8NMld2nb3TnJ+O/6KJI9KckaS\nFw/M93VJTt4rX4qE9ylo9jqWphvsbyW5LsnDaLoKOZbm7uSfJRntxuBs4A1VdX57t+6dgMOGzP+6\nqnooQJJ7VdU/tK9fSxNEfwu8g6Zvpz9ojyjuRtNX1seAv2lv/FrBrq5EpN4ZCpqtVrKrd8+17XCA\n91XVzwCq6vq2z5p5VXV+O+7nMKVuKwbv2n1gGwb3oNnwb2jHP4HmGQ20nSfeCNzYhtRDgHsDl1XV\ndbdnQaXpMBQ067RHAE8Ajmj7AZpD0xfQRyZ9423t5LanX8f2jPnTgddnAce1/VedCBw1ZN7vBk6k\n6S30vdOoSbrdvKag2eh44ANVdXhVLayqw2iecHcj8LyBc/4HV9V/AtuTHNeOu3M7/XvAknb4HsAT\nJ/m8g4Afts8zGHzYy6dpHnJD22Pvr7XjzweW0/T4uQFpLzIUNButpNnwDvoo8OvAOmBTksvZ9WyH\n5wAnJfk68GWa5xhcDZwLfLP972VM7FXA14Av0XQTPepkmofjfIPmWQNLANpnWHyWppvrW3d3IaXd\nYd9H0j6mvcB8KfCM9pkM0l7jkYK0D0myhOahMZ82EDQTPFKQJHU8UpAkdQwFSVLHUJAkdQwFSVLH\nUJAkdQwFSVLnvwC2Jx+udR0zOgAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fb548464cf8>"
+       "<matplotlib.figure.Figure at 0x7f163e9765c0>"
       ]
      },
      "metadata": {},
